--- a/index.html
+++ b/index.html
@@ -6,70 +6,83 @@
 <title>Reise-Überraschung</title>
 <style>
 body {
-font-family: Arial, sans-serif;
-background: #f0f8ff;
-text-align: center;
-padding: 20px;
+  font-family: Arial, sans-serif;
+  background: #f0f8ff;
+  text-align: center;
+  padding: 20px;
 }
 h1 {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .grid {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-gap: 15px;
-max-width: 600px;
-margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  max-width: 600px;
+  margin: 0 auto;
 }
 .door {
-background: lightblue;
-border-radius: 12px;
-padding: 40px 0;
-font-size: 20px;
-font-weight: bold;
-cursor: pointer;
-transition: 0.3s;
-position: relative;
+  background: lightblue;
+  border-radius: 12px;
+  padding: 40px 0;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+  position: relative;
 }
 .door.opened {
-background: white;
-color: black;
-cursor: default;
+  background: white;
+  color: black;
+  cursor: default;
 }
 .content {
-display: none;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-padding: 20px;
-background: white;
-border-radius: 12px;
-font-size: 16px;
-line-height: 1.4;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  background: white;
+  border-radius: 12px;
+  font-size: 16px;
+  line-height: 1.4;
 }
 .door.opened .content {
-display: block;
+  display: block;
 }
 </style>
 </head>
 <body>
 <h1>Überraschungs-Reise 🎁</h1>
 <p>Klicke jeden Tag auf das passende Türchen!</p>
+
 <div class="grid">
-<!-- 11 Türchen -->
-<div class="door" onclick="openDoor(this, 1)">Tag 1
-<div class="content">Hier steht die Überraschung für Tag 1 ✨</div>
+  <div class="door" onclick="openDoor(this, 1)">Tag 1
+    <div class="content">Hier steht die Überraschung für Tag 1 ✨</div>
+  </div>
+  <div class="door" onclick="openDoor(this, 2)">Tag 2
+    <div class="content">Überraschung für Tag 2 🎉</div>
+  </div>
+  <div class="door" onclick="openDoor(this, 3)">Tag 3
+    <div class="content">Überraschung für Tag 3 🌍</div>
+  </div>
+  <div class="door" onclick="openDoor(this, 4)">Tag 4
+    <div class="content">Überraschung für Tag 4 🎶</div>
+  </div>
+  <div class="door" onclick="openDoor(this, 5)">Tag 5
+    <div class="content">Überraschung für Tag 5 🏖️</div>
+  </div>
 </div>
-<div class="door" onclick="openDoor(this, 2)">Tag 2
-<div class="content">Überraschung für Tag 2 🎉</div>
-</div>
-<div class="door" onclick="openDoor(this, 3)">Tag 3
-<div class="content">Überraschung für Tag 3 🌍</div>
-</div>
-<div class="door" onclick="openDoor(this, 4)">Tag 4
-<div class="content">Überraschung für Tag 4 🎶</div>
-</div>
-<div class="door" onclick="openDoor(this, 5)">Tag 5
+
+<script>
+function openDoor(door, day) {
+  if (!door.classList.contains('opened')) {
+    door.classList.add('opened');
+  }
+}
+</script>
+
+</body>
 </html>
