--- a/index.html
+++ b/index.html
@@ -55,42 +55,54 @@ h1 {
 </style>
 </head>
 <body>
-<h1>Überraschungs-Reise 🎁</h1>
-<p>Klicke auf ein Türchen und gib das Passwort ein!</p>
+<h1>Überraschungs-Reise</h1>
+<p>itz muesch dr richtig tag uswähle und z entsprechende passwort ihgäh</p>
 
 <div class="grid">
-  <div class="door" onclick="openDoor(this, 1)">Tag 1
-    <div class="content">Überraschung für Tag 1 ✨</div>
+  <div class="door" onclick="openDoor(this, 1)">Tag 0
+    <div class="content">
+      <h3>Packliste:</h3>
+      <ul>
+        <li>Pass</li>
+        <li>Portmonnaie</li>
+        <li>Kamera</li>
+        <li>Ladekabus</li>
+        <li>Necessair</li>
+        <li>warmi und chauti chleider</li>
+        <li>Sunne und Regeschutz</li>
+        <li>gueds schuehwerch</li>
+      </ul>
+    </div>
   </div>
-  <div class="door" onclick="openDoor(this, 2)">Tag 2
-    <div class="content">Überraschung für Tag 2 🎉</div>
+  <div class="door" onclick="openDoor(this, 2)">Tag 1
+    <div class="content">Ab ih seat!! mir müesse dringend ah Flughafe, abr ah wele? und wo here geits ner?</div>
   </div>
-  <div class="door" onclick="openDoor(this, 3)">Tag 3
+  <div class="door" onclick="openDoor(this, 3)">Tag 2
     <div class="content">Überraschung für Tag 3 🌍</div>
   </div>
-  <div class="door" onclick="openDoor(this, 4)">Tag 4
+  <div class="door" onclick="openDoor(this, 4)">Tag 3
     <div class="content">Überraschung für Tag 4 🎶</div>
   </div>
-  <div class="door" onclick="openDoor(this, 5)">Tag 5
+  <div class="door" onclick="openDoor(this, 5)">Tag 4
     <div class="content">Überraschung für Tag 5 🏖️</div>
   </div>
-  <div class="door" onclick="openDoor(this, 6)">Tag 6
+  <div class="door" onclick="openDoor(this, 6)">Tag 5
     <div class="content">Überraschung für Tag 6 🎁</div>
   </div>
-  <div class="door" onclick="openDoor(this, 7)">Tag 7
+  <div class="door" onclick="openDoor(this, 7)">Tag 6
     <div class="content">Überraschung für Tag 7 🍀</div>
   </div>
-  <div class="door" onclick="openDoor(this, 8)">Tag 8
+  <div class="door" onclick="openDoor(this, 8)">Tag 7
     <div class="content">Überraschung für Tag 8 ✈️</div>
   </div>
-  <div class="door" onclick="openDoor(this, 9)">Tag 9
+  <div class="door" onclick="openDoor(this, 9)">Tag 8
     <div class="content">Überraschung für Tag 9 🌟</div>
   </div>
-  <div class="door" onclick="openDoor(this, 10)">Tag 10
-    <div class="content">Überraschung für Tag 10 🏔️</div>
+  <div class="door" onclick="openDoor(this, 10)">Tag 9
+    <div class="content">Überraschung für Tag 10</div>
   </div>
-  <div class="door" onclick="openDoor(this, 11)">Tag 11
-    <div class="content">Überraschung für Tag 11 🎡</div>
+  <div class="door" onclick="openDoor(this, 11)">Tag 10
+    <div class="content">Überraschung für Tag 11</div>
   </div>
 </div>
 
