--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ h1 {
 }
 .content {
   display: none;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -48,6 +48,8 @@ h1 {
   border-radius: 12px;
   font-size: 16px;
   line-height: 1.4;
+  max-hight: 300px;
+  overflow-y: auto;
 }
 .door.opened .content {
   display: block;
