--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@ h1 {
         <li>Ladekabus</li>
         <li>Necessair</li>
         <li>warmi und chauti chleider</li>
+        <li>Bikinii</li>
         <li>Sunne und Regeschutz</li>
         <li>gueds schuehwerch</li>
       </ul>
     </div>
   </div>
   <div class="door" onclick="openDoor(this, 2)">Tag 1
-    <div class="content">Ab ih seat!! mir müesse dringend ah Flughafe, abr ah wele? und wo here geits ner?</div>
+    <div class="content">
+      <p>Ab ih seat!! mir müesse dringend ah Flughafe, abr ah wele? und wo here geits ner? Abr achtung! nid göisä wend eh rise spinnele gsehsch!!!</p>
+      <p>Hoffentlech hesch gestr usgässä, wou bii schönem wetter sötte mr eh atemberoubende sunneungrgange gseh</p>
+      <p>PS: z Bikinii sötsch de jenachdem hüt ou scho zur hand ha</p>
+    </div>
   </div>
   <div class="door" onclick="openDoor(this, 3)">Tag 2
     <div class="content">Überraschung für Tag 3 🌍</div>
@@ -86,7 +91,7 @@ h1 {
     <div class="content">Überraschung für Tag 4 🎶</div>
   </div>
   <div class="door" onclick="openDoor(this, 5)">Tag 4
-    <div class="content">Überraschung für Tag 5 🏖️</div>
+    <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt!</div>
   </div>
   <div class="door" onclick="openDoor(this, 6)">Tag 5
     <div class="content">Überraschung für Tag 6 🎁</div>
