--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ h1 {
     </div>
   </div>
   <div class="door" onclick="openDoor(this, 3)">Tag 2
-    <div class="content">Überraschung für Tag 3 🌍</div>
+    <div class="content">Gueds schuehwerch ahlege und schwindufrei sii, steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
   </div>
   <div class="door" onclick="openDoor(this, 4)">Tag 3
-    <div class="content">Überraschung für Tag 4 🎶</div>
+    <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts ganz  easy und gmüetlech werde!</div>
   </div>
   <div class="door" onclick="openDoor(this, 5)">Tag 4
-    <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt!</div>
+    <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt! Abr bevors sowit isch, düe mr zersch mau chleii beindlii vrtschaupe und hoffentlech es seelii mit wunderschöner hingrgrundkulisse bestune.</div>
   </div>
   <div class="door" onclick="openDoor(this, 6)">Tag 5
     <div class="content">Überraschung für Tag 6 🎁</div>
