--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ h1 {
     <div class="content">Gueds schuehwerch ahlege und schwindufrei sii, steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
   </div>
   <div class="door" onclick="openDoor(this, 4)">Tag 3
-    <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts ganz  easy und gmüetlech werde!</div>
+    <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts abr ganz  easy und gmüetlech werde!</div>
   </div>
   <div class="door" onclick="openDoor(this, 5)">Tag 4
     <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt! Abr bevors sowit isch, düe mr zersch mau chleii beindlii vrtschaupe und hoffentlech es seelii mit wunderschöner hingrgrundkulisse bestune.</div>
   </div>
   <div class="door" onclick="openDoor(this, 6)">Tag 5
-    <div class="content">Überraschung für Tag 6 🎁</div>
+    <div class="content">Ou wenn mr hüt chleii viu im outo düe hocke, wartet dr eint oder ander cool zwüschestopp. du chasch dii uf jedefau uf chleii abwechslig im hütige tag fröie.</div>
   </div>
   <div class="door" onclick="openDoor(this, 7)">Tag 6
     <div class="content">Überraschung für Tag 7 🍀</div>
@@ -106,10 +106,12 @@ h1 {
     <div class="content">Überraschung für Tag 9 🌟</div>
   </div>
   <div class="door" onclick="openDoor(this, 10)">Tag 9
-    <div class="content">Überraschung für Tag 10</div>
+    <div class="content">Gseh heii mr neh eue scho, abr itz göh mr no chleii gneuer gah glüslä. Damit nid aus banause da steisch paar infos:
+      <li></li>
+      Hüt isch nomau achtung nid kreische ahgseit, wenn mr dürd strasse vo bilbao schlendere.</div>
   </div>
   <div class="door" onclick="openDoor(this, 11)">Tag 10
-    <div class="content">Überraschung für Tag 11</div>
+    <div class="content">Leidr sii die 10 täg scho widr vrbii und üses flugii wartet uf üs. dasmau weisch jaa z endziu scho, drum bechunsch ou chleii meh infos. abflug isch planet am 17.35 und z outölii gäbä mr am 14.30 ab (süsch müesste mr eh tag meh zahle). abr damits chleii spannend isch, luege mr ds mau eh andere flughafe ah bim zwüschestopp.</div>
   </div>
 </div>
 
