--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h1 {
 <p>itz muesch dr richtig tag uswähle und z entsprechende passwort ihgäh</p>
 
 <div class="grid">
-  <div class="door" onclick="openDoor(this, 1)">Tag 0
+  <div class="door" onclick="openDoor(this, 0)">Tag 0
     <div class="content">
       <h3>Packliste:</h3>
       <ul>
@@ -77,40 +77,43 @@ h1 {
       </ul>
     </div>
   </div>
-  <div class="door" onclick="openDoor(this, 2)">Tag 1
+  <div class="door" onclick="openDoor(this, 1)">Tag 1
     <div class="content">
       <p>Ab ih seat!! mir müesse dringend ah Flughafe, abr ah wele? und wo here geits ner? Abr achtung! nid göisä wend eh rise spinnele gsehsch!!!</p>
       <p>Hoffentlech hesch gestr usgässä, wou bii schönem wetter sötte mr eh atemberoubende sunneungrgange gseh</p>
       <p>PS: z Bikinii sötsch de jenachdem hüt ou scho zur hand ha</p>
     </div>
   </div>
-  <div class="door" onclick="openDoor(this, 3)">Tag 2
+  <div class="door" onclick="openDoor(this, 2)">Tag 2
     <div class="content">Gueds schuehwerch ahlege und schwindufrei sii, steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
   </div>
-  <div class="door" onclick="openDoor(this, 4)">Tag 3
+  <div class="door" onclick="openDoor(this, 3)">Tag 3
     <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts abr ganz  easy und gmüetlech werde!</div>
   </div>
-  <div class="door" onclick="openDoor(this, 5)">Tag 4
+  <div class="door" onclick="openDoor(this, 4)">Tag 4
     <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt! Abr bevors sowit isch, düe mr zersch mau chleii beindlii vrtschaupe und hoffentlech es seelii mit wunderschöner hingrgrundkulisse bestune.</div>
   </div>
-  <div class="door" onclick="openDoor(this, 6)">Tag 5
+  <div class="door" onclick="openDoor(this, 5)">Tag 5
     <div class="content">Ou wenn mr hüt chleii viu im outo düe hocke, wartet dr eint oder ander cool zwüschestopp. du chasch dii uf jedefau uf chleii abwechslig im hütige tag fröie.</div>
   </div>
-  <div class="door" onclick="openDoor(this, 7)">Tag 6
+  <div class="door" onclick="openDoor(this, 6)">Tag 6
     <div class="content">Überraschung für Tag 7 🍀</div>
   </div>
-  <div class="door" onclick="openDoor(this, 8)">Tag 7
-    <div class="content">Überraschung für Tag 8 ✈️</div>
+  <div class="door" onclick="openDoor(this, 7)">Tag 7
+    <div class="content">Hüt erwartet üs einii vode ungwöhnlechste, fasch surreal wirkende, Naturlandschafte. Aber achtung nimm dii in acht vode wildkaninchen wos chöntii ha.</div>
   </div>
-  <div class="door" onclick="openDoor(this, 9)">Tag 8
-    <div class="content">Überraschung für Tag 9 🌟</div>
+  <div class="door" onclick="openDoor(this, 8)">Tag 8
+    <div class="content">Hüt sii mr nomau ih dere landschaft, bevor mr ner es chlises stücklii richtig norde göh. dert erwartet üs hoffentlech es süesses städtlii miteme ihdrucksvolle, europa wyt bestuhntem gebäudekomplex</div>
   </div>
-  <div class="door" onclick="openDoor(this, 10)">Tag 9
-    <div class="content">Gseh heii mr neh eue scho, abr itz göh mr no chleii gneuer gah glüslä. Damit nid aus banause da steisch paar infos:
-      <li></li>
-      Hüt isch nomau achtung nid kreische ahgseit, wenn mr dürd strasse vo bilbao schlendere.</div>
+  <div class="door" onclick="openDoor(this, 9)">Tag 9
+    <div class="content">Gseh heii mr seh eue scho, abr itz göh mr no chleii gneuer gah glüslä. Damit nid aus banause da steisch paar infos:
+      <li>Ersti befestigung ir römerzyt, hütigii burg auerdings usem mittuauter.</li>
+      <li>König Karl dr 3. vo navarra (der Edelmütige) het d burg im 15. Jh. lah usboue und zu sire residenz gmacht.</li>
+      <li>Nach dr vreinigung navarras mit kastilien het si ah bedütig vrlore und isch zergheit. vorauem im spanische unabhänigskeitchrieg isch sii schwär beschädigt und niederbrönnt worde.</li>
+      <li>im 20. Jh isch sii widr ufboue und restauriert worde.</li>
+      Hüt isch nomau achtung nid kreische ahgseit, wenn mr dürd strasse vo bilbao schlendere. Abr zwüsche dr burg und ehm kreische gits no es zwüsche stöpplii oder zwöii und vilech treffe mr jaa no die heiligii barbara</div>
   </div>
-  <div class="door" onclick="openDoor(this, 11)">Tag 10
+  <div class="door" onclick="openDoor(this, 10)">Tag 10
     <div class="content">Leidr sii die 10 täg scho widr vrbii und üses flugii wartet uf üs. dasmau weisch jaa z endziu scho, drum bechunsch ou chleii meh infos. abflug isch planet am 17.35 und z outölii gäbä mr am 14.30 ab (süsch müesste mr eh tag meh zahle). abr damits chleii spannend isch, luege mr ds mau eh andere flughafe ah bim zwüschestopp.</div>
   </div>
 </div>
@@ -118,17 +121,17 @@ h1 {
 <script>
 // Passwörter für jedes Türchen
 const passwords = {
-  1: "pass1",
-  2: "pass2",
-  3: "pass3",
-  4: "pass4",
-  5: "pass5",
-  6: "pass6",
-  7: "pass7",
-  8: "pass8",
-  9: "pass9",
-  10: "pass10",
-  11: "pass11"
+  0: "pass1",
+  1: "pass2",
+  2: "pass3",
+  3: "pass4",
+  4: "pass5",
+  5: "pass6",
+  6: "pass7",
+  7: "pass8",
+  8: "pass9",
+  9: "pass10",
+  10: "pass11"
 };
 
 function openDoor(door, day) {
