--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ h1 {
     <div class="content">Gueds schuehwerch ahlege und schwindufrei sii, steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
   </div>
   <div class="door" onclick="openDoor(this, 3)">Tag 3
-    <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts abr ganz  easy und gmüetlech werde!</div>
+    <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts abr ganz easy und gmüetlech werde!</div>
   </div>
   <div class="door" onclick="openDoor(this, 4)">Tag 4
     <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt! Abr bevors sowit isch, düe mr zersch mau chleii beindlii vrtschaupe und hoffentlech es seelii mit wunderschöner hingrgrundkulisse bestune.</div>
@@ -121,17 +121,17 @@ h1 {
 <script>
 // Passwörter für jedes Türchen
 const passwords = {
-  0: "pass1",
-  1: "pass2",
-  2: "pass3",
-  3: "pass4",
-  4: "pass5",
-  5: "pass6",
-  6: "pass7",
-  7: "pass8",
-  8: "pass9",
-  9: "pass10",
-  10: "pass11"
+  0: "packliste",
+  1: "ufstaaah",
+  2: "narren",
+  3: "zmörgelää",
+  4: "meeeeegacool",
+  5: "gaudi",
+  6: "lagunaaaas",
+  7: "abufemond",
+  8: "wauuii",
+  9: "karldr3.",
+  10: "ohoh:("
 };
 
 function openDoor(door, day) {
