--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ h1 {
     </div>
   </div>
   <div class="door" onclick="openDoor(this, 2)">Tag 2
-    <div class="content">Gueds schuehwerch ahlege und schwindufrei sii, steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
+    <div class="content">Gueds schuehwerch ahlege und schwindufrei sii steit hüt ufem programm. Bätä dasd nid vore chueh ahgriffe wirsch, chasch de ner ouno keh angst!</div>
   </div>
   <div class="door" onclick="openDoor(this, 3)">Tag 3
     <div class="content">Hüt muesch ganz gued zmörgelä wou es steit eh längii drfür troumhaftii wanderig ah. die erste 2km müesse mr chleii dürebise, ner sötts abr ganz easy und gmüetlech werde!</div>
@@ -94,10 +94,10 @@ h1 {
     <div class="content">Äs isch meeeeeeeeega cool! Kamera darfsch hüt uf keh fau vrgesse! und mir hoffe du hesch dinii glückssocke ane, wou ganz viu glück bruche mr hüt! Abr bevors sowit isch, düe mr zersch mau chleii beindlii vrtschaupe und hoffentlech es seelii mit wunderschöner hingrgrundkulisse bestune.</div>
   </div>
   <div class="door" onclick="openDoor(this, 5)">Tag 5
-    <div class="content">Ou wenn mr hüt chleii viu im outo düe hocke, wartet dr eint oder ander cool zwüschestopp. du chasch dii uf jedefau uf chleii abwechslig im hütige tag fröie.</div>
+    <div class="content">Ou wenn mr hüt chleii viu im outo düe hocke, wartet dr eint oder ander cool zwüschestopp. du chasch dii uf jedefau uf abwechslig und gaudi im hütige tag fröie.</div>
   </div>
   <div class="door" onclick="openDoor(this, 6)">Tag 6
-    <div class="content">Überraschung für Tag 7 🍀</div>
+    <div class="content">Bim einte stopp chömä vilech chleii montenegro vibes ufe und fauses scho chleii am herbstele isch, chasch dii uf buntii farbe fröie während dinii beindlii am bewege bisch, bide zwüschestopps damit mr nid dr ganz tag im outo höcklä.</div>
   </div>
   <div class="door" onclick="openDoor(this, 7)">Tag 7
     <div class="content">Hüt erwartet üs einii vode ungwöhnlechste, fasch surreal wirkende, Naturlandschafte. Aber achtung nimm dii in acht vode wildkaninchen wos chöntii ha.</div>
