--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ h1 {
 </style>
 </head>
 <body>
-<h1>Überraschungs-Reise</h1>
+<h1>Übrraschigs-Reis</h1>
 <p>itz muesch dr richtig tag uswähle und z entsprechende passwort ihgäh</p>
 
 <div class="grid">
